--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bootstrap3-wysihtml5-bower-rtl",
-  "version": "0.2.12-wip",
+  "version": "0.1.0",
   "description": "Bootstrap 3 compatible rtl wysiwyg editor",
   "directories": {
     "test": "test"
